feature : add signup page.

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
         <a href="" class="title">CRUD</a>
         <div class="flex item-center gap-2">
             <a href="pages/login.html" class="btn">profile </a>
-            <a href="pages/login.html" class="btn">Login</a>
+            <a href="pages/signup.html" class="btn">signup</a>
             <a href="pages/login.html" class="btn">update</a>
         </div>
     </nav>
