feat : add profile.

--- a/client/index.html
+++ b/client/index.html
@@ -12,9 +12,9 @@
     <nav class="nav-bar">
         <a href="" class="title">CRUD</a>
         <div class="flex item-center gap-2">
-            <a href="pages/login.html" class="btn">profile </a>
+            <a href="pages/profile.html" class="btn">profile </a>
             <a href="pages/signup.html" class="btn">signup</a>
-            <a href="pages/login.html" class="btn">update</a>
+            <a href="pages/update.html" class="btn">update</a>
         </div>
     </nav>
 
@@ -25,22 +25,20 @@
         <h3>
             You can create a user , read ,write and delete.
         </h3>
-        <div class="flex item-center gap-2">
-            <a href="pages/login.html" class="btn">Login</a>
-            <a href="pages/login.html" class="btn">update</a>
+        <div class="flex item-center gap-4">
+            <a href="pages/signup.html" class="btn">Login</a>
+            <a href="pages/update.html" class="btn">update</a>
         </div>
     </section>
     <section>
         <h3>Users list</h3>
-        <table border="1px" cellpadding="10px">
+        <table border="1px" cellpadding="10px" style="margin-top: 1rem ;">
             <tr>
                 <th>id</th>
                 <th>name</th>
                 <th>email</th>
                 <th>created at</th>
             </tr>
-
-
             <tr>
 
                 <td>1</td>
@@ -49,21 +47,18 @@
                 <td>2022</td>
             </tr>
             <tr>
-
                 <td>1</td>
                 <td>a</td>
                 <td>b</td>
                 <td>2022</td>
             </tr>
             <tr>
-
                 <td>1</td>
                 <td>a</td>
                 <td>b</td>
                 <td>2022</td>
             </tr>
             <tr>
-
                 <td>1</td>
                 <td>a</td>
                 <td>b</td>
