--- a/pages/update.html
+++ b/pages/update.html
@@ -6,15 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/signup.css">
-    <title>Signup</title>
+    <title>Update</title>
 </head>
 
 <body>
+    <nav class="nav-bar">
+        <a href="/php_journey" class="title">CRUD</a>
+        <div class="flex item-center gap-2">
+            <a href="profile.html" class="btn">profile </a>
+            <a href="signup.html" class="btn">signup</a>
+            <a href="" class="btn">update</a>
+        </div>
+    </nav>
+
     <form action="">
-        <h1 style="text-align: center;"> Sign up </h1>
+        <h1 style="text-align: center;"> Update </h1>
         <div style="margin: 1rem 0;">
-
-
             <label for="name" class="input-container">Name
                 <input type="text" name="name" id="name" placeholder="jhon doe">
             </label>
@@ -27,9 +34,9 @@
                 <input type="password" name="password" id="password" placeholder="your passwprd">
             </label>
 
-            <a href="/php_journey/client" style="font-size: 12px ; margin: 6px 0;">Back to home page.</a>
+
         </div>
-        <button type="submit" class="btn" style="width: 100%;">Signup</button>
+        <button type="submit" class="btn" style="width: 100%;">Update</button>
     </form>
 </body>
 
