connect db with pdo and create user.

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form action="">
+    <form action="../includes/signup.php" method="POST">
         <h1 style="text-align: center;"> Sign up </h1>
         <div style="margin: 1rem 0;">
 
@@ -22,9 +22,9 @@
                 Email
                 <input type="email" name="email" id="email" placeholder="example@gmail.com">
             </label>
-            <label for="name" class="input-container">
+            <label for="pwd" class="input-container">
                 Password
-                <input type="password" name="password" id="password" placeholder="your passwprd">
+                <input type="password" name="pwd" id="password" placeholder="your passwprd">
             </label>
 
             <a href="/php_journey" style="font-size: 12px ; margin: 6px 0;">Back to home page.</a>
