tester update user.

--- a/pages/update.html
+++ b/pages/update.html
@@ -19,7 +19,7 @@
         </div>
     </nav>
 
-    <form action="">
+    <form action="../includes/update.inc.php" method="POST">
         <h1 style="text-align: center;"> Update </h1>
         <div style="margin: 1rem 0;">
             <label for="name" class="input-container">Name
@@ -29,9 +29,9 @@
                 Email
                 <input type="email" name="email" id="email" placeholder="example@gmail.com">
             </label>
-            <label for="name" class="input-container">
+            <label for="pwd" class="input-container">
                 Password
-                <input type="password" name="password" id="password" placeholder="your passwprd">
+                <input type="pwd" name="pwd" id="pwd" placeholder="your password">
             </label>
 
 
